test/Transforms/PodToScalar/ragged_nested_array_len.llzk
// RUN: llzk-opt -split-input-file -llzk-pod-to-scalar -verify-diagnostics %s

// COM: Regression test: reading one POD element from an array-of-POD whose POD contains an array
// COM: leaf is intentionally rejected when that leaf needs shape information for array.len. After
// COM: POD-to-scalar flattens the outer array, an array.read selects only the leaf values for one
// COM: element. It does not also select a matching per-element shape witness for a nested dynamic
// COM: or affine leaf, so lowering array.len would have to invent or reuse shape information that
// COM: may belong to a different element. Keep this unsupported until the lowering can thread the
// COM: selected element's shape witness alongside the selected leaf value.
// COM: A future implementation should split an additional nested shape-carrier leaf, e.g. an
// COM: array-of-none parallel to the flattened payload, and select that carrier with the same
// COM: indices used by array.read before rewriting array.len.

!Inner = !pod.type<[@vals: !array.type<? x index>]>
!OuterArr = !array.type<2 x !Inner>
module attributes {llzk.lang} {
  function.def @ragged_dynamic_len(%items: !OuterArr, %i: index) -> index {
    %item = array.read %items[%i] : !OuterArr, !Inner
    %vals = pod.read %item[@vals] : !Inner, !array.type<? x index>
    %c0 = arith.constant 0 : index
    // expected-error@+1 {{'array.len' op cannot lower nested dynamic array leaf length after reading an array-of-POD element without per-element shape witnesses}}
    %len = array.len %vals, %c0 : !array.type<? x index>
    function.return %len : index
  }
}
// -----

!Inner = !pod.type<[@vals: !array.type<? x index>]>
!OuterArr = !array.type<2 x !Inner>
module attributes {llzk.lang} {
  function.def @ragged_dynamic_len_after_unifiable_cast(%items: !OuterArr, %i: index) -> index {
    %item = array.read %items[%i] : !OuterArr, !Inner
    %vals = pod.read %item[@vals] : !Inner, !array.type<? x index>
    %cast = poly.unifiable_cast %vals : (!array.type<? x index>) -> !array.type<? x index>
    %c0 = arith.constant 0 : index
    // expected-error@+1 {{'array.len' op cannot lower nested dynamic array leaf length after reading an array-of-POD element without per-element shape witnesses}}
    %len = array.len %cast, %c0 : !array.type<? x index>
    function.return %len : index
  }
}
// -----

#map = affine_map<()[s0] -> (s0 + 1)>
!Inner = !pod.type<[@vals: !array.type<#map x index>]>
!OuterArr = !array.type<2 x !Inner>
module attributes {llzk.lang} {
  function.def @ragged_affine_len(%items: !OuterArr, %i: index) -> index {
    %item = array.read %items[%i] : !OuterArr, !Inner
    %vals = pod.read %item[@vals] : !Inner, !array.type<#map x index>
    %c0 = arith.constant 0 : index
    // expected-error@+1 {{'array.len' op cannot lower nested affine array leaf length after reading an array-of-POD element without per-element shape witnesses}}
    %len = array.len %vals, %c0 : !array.type<#map x index>
    function.return %len : index
  }
}
// -----

#map = affine_map<()[s0] -> (s0 + 1)>
!Inner = !pod.type<[@vals: !array.type<#map x index>]>
!OuterArr = !array.type<2 x !Inner>
module attributes {llzk.lang} {
  function.def @ragged_affine_len_after_unifiable_cast(%items: !OuterArr, %i: index) -> index {
    %item = array.read %items[%i] : !OuterArr, !Inner
    %vals = pod.read %item[@vals] : !Inner, !array.type<#map x index>
    %cast = poly.unifiable_cast %vals : (!array.type<#map x index>) -> !array.type<#map x index>
    %c0 = arith.constant 0 : index
    // expected-error@+1 {{'array.len' op cannot lower nested affine array leaf length after reading an array-of-POD element without per-element shape witnesses}}
    %len = array.len %cast, %c0 : !array.type<#map x index>
    function.return %len : index
  }
}
